--- a/index.html
+++ b/index.html
@@ -2,9 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>「Webコンテンツ作成」の成果</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <h1>本テーマの学習目的</h1>
+    <p>ここでは学習目標を記載してください、シラバスや講義資料から読み取りましょう。</p>
+    <h1>プロジェクト課題について</h1>
+    <p>プロジェクト課題では...を実施する。ここで表示するデータは...</p>
+    <p>プロジェクト課題で作成したページ<a href="project.html">project.html</a></p>
+    <h1>毎回の講義で作成したページ</h1>
+    <h2>第1回HTMLによるWebページの構造の記述</h2>
+    <p>今回は次の....について学びました。また次の課題に取り組みました。</p>
+    <h3>練習1-4:リスト</h3>
+    <p>テキストだけで記述されていたレシピのHTMLを編集しました。見出しやリストなどの要素により文書の構造を記述しました。ここで使用したのはp要素,h1要素,ul要素,olなどです。</p>
+    <p>編集したファイル:<a href="practice/text-start.html">practice/text-start.html</a></p>
+    <h3>練習1-5:ナビゲーションメニューの作成</h3>
+    <p>practiceフォルダの4つのファイルをナビゲーションリンクにより接続しました。リンクの設置にはa要素を使いました。</p>
+    <P>編集したファイル:<a href="practice/index.html">practice/index.html</a></P>
+    <h3>課題1-2:debug-example.htmlの修正</h3>
+    <p>debug-example.htmlを修正しました。また、HTMLバリデーターなどを使用して、HTMLが整形式になったことを確認しました。</p>
+    <p>修正したファイル:<a href="practice/debug-example.html">practice/debug-example.html</a></p>
+    <h3>課題1-3:index.htmlの作成</h3>
+    <p>index.htmlはこのページのHTMLファイルです。この課題ではindex.htmlのテンプレートを作成しました。</p>
+    <h3>課題1-4:データを選ぶ</h3>
+    <p>世界の天気を選択しました。</p>
+  <h1>第２回CSSによるWebページの装飾</h1>
+  <h1>第３回JavaScriptの基本</h1>
+  <h1>第４回フォームとイベント処理</h1>
+  <h1>第５回Webページの動的な編集</h1>
+  <h1>第６回Webページ作成演習</h1>
   </body>
 </html>
