--- a/practice/pictures.html
+++ b/practice/pictures.html
@@ -7,9 +7,12 @@
 
   <body>
     <!-- put navigation menu just below here -->
-
-    <h1>Pictures</h1>
-
+    <ul>
+    <li><a href="index.html">social.htmlへのリンク</a></li>
+    <li><a href="picture.html">social.htmlへのリンク</a></li>
+    <li><a href="projects">social.htmlへのリンク</a></li>
+    <li><a href="social.html">social.htmlへのリンク</a></li> 
+    </ul>
     <p>My pictures will go here, when I start taking some.</p>
   </body>
 </html>
