--- a/project.html
+++ b/project.html
@@ -1,1 +1,26 @@
-<h1>グルメ情報</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>kadai</title>
+</head>
+<body>
+    <header>
+        <h1>グルメ情報</h1>
+    </header> 
+ <table border="1" width="50%">
+    <meta name=”keywords” content=”genre”>
+    <tr>
+      <th>名前</th>
+      <th>年齢</th>
+    </tr>
+    <tr>
+      <td>田中</td>
+      <td>27</td>
+    </tr>
+    <tr>
+      <td>佐藤</td>
+      <td>42</td>
+    </tr>
+  </table>
+</body>
+</html>
