--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <h1>本テーマの学習目的</h1>
-    <p>ここでは学習目標を記載してください、シラバスや講義資料から読み取りましょう。</p>
+    <p>基礎をしっかり理解する</p>
     <h1>プロジェクト課題について</h1>
-    <p>プロジェクト課題では...を実施する。ここで表示するデータは...</p>
+    <p>プロジェクト課題ではグルメ情報を実施する。ここで表示するデータは...</p>
     <p>プロジェクト課題で作成したページ<a href="project.html">project.html</a></p>
     <h1>毎回の講義で作成したページ</h1>
     <h2>第1回HTMLによるWebページの構造の記述</h2>
-    <p>今回は次の....について学びました。また次の課題に取り組みました。</p>
+    <p>今回は次のHTMLについて学びました。また次の課題に取り組みました。</p>
     <h3>練習1-4:リスト</h3>
     <p>テキストだけで記述されていたレシピのHTMLを編集しました。見出しやリストなどの要素により文書の構造を記述しました。ここで使用したのはp要素,h1要素,ul要素,olなどです。</p>
     <p>編集したファイル:<a href="practice/text-start.html">practice/text-start.html</a></p>
