--- a/project.html
+++ b/project.html
@@ -8,18 +8,25 @@
         <h1>グルメ情報</h1>
     </header> 
  <table border="1" width="50%">
-    <meta name=”keywords” content=”genre”>
     <tr>
-      <th>名前</th>
-      <th>年齢</th>
+      <th>番号</th>
+      <th>ジャンル</th>
     </tr>
     <tr>
-      <td>田中</td>
-      <td>27</td>
+      <td>G001</td>
+      <td><a name="G001">居酒屋</a></td>
     </tr>
     <tr>
-      <td>佐藤</td>
-      <td>42</td>
+      <td>G002</td>
+      <td><a name="G002">ダイニングバー・バル</a></td>
+    </tr>
+    <tr>
+      <td>G003</td>
+      <td><a name="G003">創作料理</a></td>
+    </tr>
+    <tr>
+      <td>G004</td>
+      <td><a name="G004">和食</a></td>
     </tr>
   </table>
 </body>
