--- a/index.html
+++ b/index.html
@@ -26,8 +26,17 @@
     <h3>課題1-3:index.htmlの作成</h3>
     <p>index.htmlはこのページのHTMLファイルです。この課題ではindex.htmlのテンプレートを作成しました。</p>
     <h3>課題1-4:データを選ぶ</h3>
-    <p>世界の天気を選択しました。</p>
+    <p>グルメ情報を選択しました。</p>
   <h1>第２回CSSによるWebページの装飾</h1>
+    <h3>練習2-3:CSSの修正</h3>
+    <p>CSSのデバッグを見つけ、実際に修正してみました。</p>
+    <P>修正したファイル:<a href="practice-css/styles.css">practice-css/styles.css</a></P>
+    <h3>課題2-1:medialabo/index.html の CSS を作成する</h3>
+    <p>medialabo/index.htmlのCSSを作成しました。</p>
+    <h3>課題2-2:project.html CSS の作成</h3>
+    <p>project.htmlのCSSを作成しました。</p>
+    <h3>課題2-3:medialabo/index.html を編集しよう</h3>
+    <p>このページに文章を追加しました。</p>
   <h1>第３回JavaScriptの基本</h1>
   <h1>第４回フォームとイベント処理</h1>
   <h1>第５回Webページの動的な編集</h1>
