--- a/practice-js/jsintro.html
+++ b/practice-js/jsintro.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>はじめての JavaScript</title>
-  <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=mZCoo-W_neYNjhA-qItRkT42nHzigk64SEpp_ncOJ-9xmHoad74K0ACnwEY5un6fJAndlBMXAVjJdHaTfwXNFg5kOD63-u7BG2U61lizRlkckJicRdrGJ0LuRZNvCLhE" charset="UTF-8"></script></head>
-
+    <script src="hello.js" defer></script>
+    
   <body>
     <h1>はじめての JavaScript</h1>
 
