--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
     <h3>課題2-3:medialabo/index.html を編集しよう</h3>
     <p>このページに文章を追加しました。</p>
   <h1>第３回JavaScriptの基本</h1>
+    <h3>練習3-5:プログラムを書き足す</h3>
+    <p>hello.jsを開き、ローカル関数を編集し、コンソールに表示しました。</p>
+    <p>修正したファイル:<a href="practice-js/jsintro.html">practice-js/jsintro.html</a></p>
+    <h3>練習3-6:オブジェクトの参照</h3>
+    <p>practice-js/obj-practice.jsにforofやconsolelogを使い、コンソールに表示しました。</p>
+    <p>修正したファイル:<a href="practice-js/obj-practice.html">practice-js/obj-practice.html</a></p>
+    <h3>課題3-1:数当てゲームの作成（その1）</h3>
+    <p>kazuate.htmlとkazuate.jsを作成し、判定のプログラムを作りました。/p>
+    <h3>課題3-2:オブジェクトからデータを取り出す</h3>
+    <p></p>
+    <h3>課題3-3:index.html を編集しよう</h3>
+    <p></p>
   <h1>第４回フォームとイベント処理</h1>
   <h1>第５回Webページの動的な編集</h1>
   <h1>第６回Webページ作成演習</h1>
