--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <h3>課題3-1:数当てゲームの作成（その1）</h3>
     <p>kazuate.htmlとkazuate.jsを作成し、判定のプログラムを作りました。/p>
     <h3>課題3-2:オブジェクトからデータを取り出す</h3>
-    <p></p>
+    <p>作成したJavaScriptプログラムを practicr.htmlに組み込みました。</p>
     <h3>課題3-3:index.html を編集しよう</h3>
-    <p></p>
+    <p>このページに文章を追加しました。</p>
   <h1>第４回フォームとイベント処理</h1>
   <h1>第５回Webページの動的な編集</h1>
   <h1>第６回Webページ作成演習</h1>
