--- a/practice-dom/dom-demo.html
+++ b/practice-dom/dom-demo.html
@@ -3,7 +3,7 @@
   <head>
     <title>大陸について</title>
     <link rel="stylesheet" href="dom-demo.css">
-  <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=Kf8MFpwp5k6GczKAwQS5UUKJybhX7lpPJF0YGLd8F3EMmZMwe6anGJPXWApXJYRnQHMwDGOwk5M855tbzi19MjUXGexxiYwlrxnXoRubJ9LLkIkP6ehQYaETkOLbBQzX" charset="UTF-8"></script></head>
+  <script scr="dom-demo.js" defer></script></head>
 
   <body>
       <h1>大陸について</h1>
