--- a/practice-dom/div-demo2.html
+++ b/practice-dom/div-demo2.html
@@ -4,6 +4,8 @@
   <head>
     <title>写真表</title>
 	<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=iQRjovRBbqe7PblWzDHiulisPFHmYwX6uZHjDF3_BqBdhgvogyyv9blQlYY2KjGKjp1rtRuiSwL0bYahvoEQTBRGiOc-wHsHvK4dcMgk9iH4aDCeVbegti3mVtc9YZ1s" charset="UTF-8"></script><script src="div-demo2.js" defer></script>
+  <link rel="stylesheet" href="div-demo2.js" >
+  <link rel="stylesheet" href="div-demo2.css" >
   </head>
 
   <body>
