--- a/practice-dom/dom-demo.html
+++ b/practice-dom/dom-demo.html
@@ -3,7 +3,8 @@
   <head>
     <title>大陸について</title>
     <link rel="stylesheet" href="dom-demo.css">
-  <script scr="dom-demo.js" defer></script></head>
+    <script src="dom-demo.js" defer></script>
+  </head>
 
   <body>
       <h1>大陸について</h1>
@@ -22,7 +23,7 @@
 
       <h2 id="aboutOcean">大洋とは</h2>
 
-      <h2 id="savenOcean">7つの大洋</h2>
+      <h2 id="sevenOcean">7つの大洋</h2>
 
   </body>
 </html>
