--- a/index.html
+++ b/index.html
@@ -51,6 +51,26 @@
     <h3>課題3-3:index.html を編集しよう</h3>
     <p>このページに文章を追加しました。</p>
   <h1>第４回フォームとイベント処理</h1>
+    <h3>練習4-6:プログラムを組み込む</h3>
+    <p>dom-demo.jsを作成し、dom-demo.htmlに組み込みました。</p>
+    <h3>練習4-7:7大洋のリストを追加する</h3>
+    <p>dom-demo.jsに大陸リストを増やすプログラムを追加しました。</p>
+    <h3>練習4-9:すべての h2 要素の背景色を変更する</h3>
+    <p>dom-demo.jsに背景を緑色にするプログラムを追加しました。</p>
+    <p>追加したファイル:<a href="practice-dom/dom-demo.js">practice-dom/dom-demo.js</a></p>
+    <h3>練習4-11:プレースホルダーとしての div 要素と span 要素</h3>
+    <p>ファイルに表示する画像と名前を変更しました。</p>
+    <p>追加したファイル:<a href="practice-dom/div-span-demo1.js">practice-dom/div-span-demo1.js</a></p>
+    <h3>練習4-12:写真表</h3>
+    <p>前回作成したファイルのレイアウトを変更しました。</p>
+    <p>追加したファイル:<a href="practice-dom/div-demo2.html">practice-dom/div-demo2.html</a></p>
+    <h3>課題4-1:数当てゲームのページを改良する</h3>
+    <p>前回作成したファイルをspanやプレースホルダーを用いて変更しました。</p>
+    <p>変更したファイル:<a href="kazuate.html">kazuate.html</a></p>
+    <h3>課題4-2:オブジェクトをページ上に表示する</h3>
+    <p>前回作成したファイルにJavaScriptプログラムを加え、プレースホルダーに変更しました。</p>
+    <h3>課題4-3:index.html を編集しよう</h3>
+    <p>このページを編集しました。</p>
   <h1>第５回Webページの動的な編集</h1>
   <h1>第６回Webページ作成演習</h1>
   </body>
