--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <h1>第２回CSSによるWebページの装飾</h1>
     <h3>練習2-3:CSSの修正</h3>
     <p>CSSのデバッグを見つけ、実際に修正してみました。</p>
-    <P>修正したファイル:<a href="practice-css/styles.css">practice-css/styles.css</a></P>
+    <P>修正したファイル:<a href="practice-css/index.html">practice-css/index.html</a></P>
     <h3>課題2-1:medialabo/index.html の CSS を作成する</h3>
     <p>medialabo/index.htmlのCSSを作成しました。</p>
     <h3>課題2-2:project.html CSS の作成</h3>
