--- a/kazuate.html
+++ b/kazuate.html
@@ -8,9 +8,10 @@
 
   <body>
     <h1>数当てゲーム</h1>
-    <p>第5回課題でテキストボックスとボタンを設置します．</p>
+    <label for="suuzi">1から10の間の整数: </label>
+    <input type="text" name="suuzi" id="suuzi">
+    <button id="print">表示</button>
     <p><span id="kaisu"></span>回目の予想: <span id="yoso"></span> です．</p>
-    <p id="result">第4回課題で結果を表示します</p>
-    <div id="placeholder"></div>
+    <p id="result"></p>
   </body>
 </html>
