--- a/project.html
+++ b/project.html
@@ -3,8 +3,13 @@
 <head>
 <title>kadai</title>
 <script src="gourmet.js" defer></script>
+<link rel="stylesheet" href="style.css">
+<script src="gourmet.js" defer></script>
 </head>
 <body>
+  <label for="ken">番号を入力:</label>
+  <input type="text" name="suuzi" id="suuzi" size="10">
+  <button id="print">表示</button>
     <header>
         <h1>グルメ情報</h1>
     </header> 
