--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <p>修正したファイル:<a href="practice-js/obj-practice.html">practice-js/obj-practice.html</a></p>
     <h3>課題3-1:数当てゲームの作成（その1）</h3>
     <p>kazuate.htmlとkazuate.jsを作成し、判定のプログラムを作りました。/p>
+      <p>修正したファイル:<a href="kazuate.html">kazuate.html</a></p>
     <h3>課題3-2:オブジェクトからデータを取り出す</h3>
     <p>作成したJavaScriptプログラムを practicr.htmlに組み込みました。</p>
     <h3>課題3-3:index.html を編集しよう</h3>
