--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>プロジェクト課題ではグルメ情報を実施する。ここで表示するデータは...</p>
     <p>プロジェクト課題で作成したページ<a href="project.html">project.html</a></p>
     <h1>毎回の講義で作成したページ</h1>
-  <h1>第１回HTMLによるWebページの構造の記述</h1>
+  <h1 class="1">第１回HTMLによるWebページの構造の記述</h1>
     <p>今回は次のHTMLについて学びました。また次の課題に取り組みました。</p>
     <h3>練習1-4:リスト</h3>
     <p>テキストだけで記述されていたレシピのHTMLを編集しました。見出しやリストなどの要素により文書の構造を記述しました。ここで使用したのはp要素,h1要素,ul要素,olなどです。</p>
@@ -27,7 +27,7 @@
     <p>index.htmlはこのページのHTMLファイルです。この課題ではindex.htmlのテンプレートを作成しました。</p>
     <h3>課題1-4:データを選ぶ</h3>
     <p>グルメ情報を選択しました。</p>
-  <h1>第２回CSSによるWebページの装飾</h1>
+  <h1 class="1">第２回CSSによるWebページの装飾</h1>
     <h3>練習2-3:CSSの修正</h3>
     <p>CSSのデバッグを見つけ、実際に修正してみました。</p>
     <P>修正したファイル:<a href="practice-css/index.html">practice-css/index.html</a></P>
@@ -37,7 +37,7 @@
     <p>project.htmlのCSSを作成しました。</p>
     <h3>課題2-3:medialabo/index.html を編集しよう</h3>
     <p>このページに文章を追加しました。</p>
-  <h1>第３回JavaScriptの基本</h1>
+  <h1 class="1">第３回JavaScriptの基本</h1>
     <h3>練習3-5:プログラムを書き足す</h3>
     <p>hello.jsを開き、ローカル関数を編集し、コンソールに表示しました。</p>
     <p>修正したファイル:<a href="practice-js/jsintro.html">practice-js/jsintro.html</a></p>
@@ -51,7 +51,7 @@
     <p>作成したJavaScriptプログラムを practicr.htmlに組み込みました。</p>
     <h3>課題3-3:index.html を編集しよう</h3>
     <p>このページに文章を追加しました。</p>
-  <h1>第４回フォームとイベント処理</h1>
+  <h1 class="1">第４回フォームとイベント処理</h1>
     <h3>練習4-6:プログラムを組み込む</h3>
     <p>dom-demo.jsを作成し、dom-demo.htmlに組み込みました。</p>
     <h3>練習4-7:7大洋のリストを追加する</h3>
@@ -72,7 +72,7 @@
     <p>前回作成したファイルにJavaScriptプログラムを加え、プレースホルダーに変更しました。</p>
     <h3>課題4-3:index.html を編集しよう</h3>
     <p>このページを編集しました。</p>
-  <h1>第５回Webページの動的な編集</h1>
+  <h1 class="1">第５回Webページの動的な編集</h1>
     <h3>練習5-2:イベントハンドラの登録を確認する</h3>
     <p>イベントハンドラを新たに登録しました。</p>
     <p>確認したファイル:<a href="practice-event/event-intro.html">practice-event/event-intro.html</a></p>
@@ -86,6 +86,6 @@
     <p>project.htmlにinput要素やラベル,ボタンを作りました。</p>
     <h3>課題5-3:index.html を編集しよう</h3>
     <p>このページを編集しました。</p>
-  <h1>第６回Webページ作成演習</h1>
+  <h1 class="1">第６回Webページ作成演習</h1>
   </body>
 </html>
