--- a/project.html
+++ b/project.html
@@ -14,6 +14,11 @@
     <input type="text" name="suuzi" id="suuzi" size="2">
     <button id="print">表示</button>
  <table border="1" width="50%">
+  <tr>
+    <th id="access">アクセス</th>
+  </tr>
+ </table>
+ <table border="1" width="50%">
     <tr>
       <th>番号</th>
       <th>ジャンル</th>
@@ -52,5 +57,6 @@
     </tr>
   </table>
   <p id="result"></p>
+  <a id="result"></a>
 </body>
-</html>
+</html>//dom
