--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
     <label for="ken">番号を入力:</label>
     <input type="text" name="suuzi" id="suuzi" size="2">
     <button id="print">表示</button>
- <table border="1" width="50%">
+ <table border="1" width="100%">
   <tr>
     <th id="access">アクセス</th>
   </tr>
@@ -59,4 +59,4 @@
   <p id="result"></p>
   <a id="result"></a>
 </body>
-</html>//dom
+</html>
