--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <h1>本テーマの学習目的</h1>
-    <p>基礎をしっかり理解する</p>
+    <p>学外のサーバを通信してデータ検索し、検索した結果を表示するWebページを作ることで、htmlでのWebページの構造やjavascriptでの装飾の仕方、CSSを基礎の部分から理解できるようにすること。</p>
     <h1>プロジェクト課題について</h1>
-    <p>プロジェクト課題ではグルメ情報を実施する。ここで表示するデータは...</p>
+    <p>プロジェクト課題ではグルメ情報を選択しました。ここで表示するデータはアクセスです。検索欄には検索欄の下にある表を見て、検索したい番号を入力することができます。また、Webページに表示されていない番号以外も入力することができます。番号以外のキーワードを入力するとエラー文がWebページに表示されます。検索を終了するとコンソールに検索終了と表示されます。コンソールには他にdataに入っているお店の名前が表示されます。</p>
     <p>プロジェクト課題で作成したページ<a href="project.html">project.html</a></p>
     <h1>毎回の講義で作成したページ</h1>
   <h1 class="1">第１回HTMLによるWebページの構造の記述</h1>
@@ -19,7 +19,7 @@
     <p>編集したファイル:<a href="practice/text-start.html">practice/text-start.html</a></p>
     <h3>練習1-5:ナビゲーションメニューの作成</h3>
     <p>practiceフォルダの4つのファイルをナビゲーションリンクにより接続しました。リンクの設置にはa要素を使いました。</p>
-    <P>編集したファイル:<a href="practice/index.html">practice/index.html</a></P>
+    <P>編集したファイル:<a href="practice/pictures.html">practice/pictures.html</a></P>
     <h3>課題1-2:debug-example.htmlの修正</h3>
     <p>debug-example.htmlを修正しました。また、HTMLバリデーターなどを使用して、HTMLが整形式になったことを確認しました。</p>
     <p>修正したファイル:<a href="practice/debug-example.html">practice/debug-example.html</a></p>
@@ -87,5 +87,13 @@
     <h3>課題5-3:index.html を編集しよう</h3>
     <p>このページを編集しました。</p>
   <h1 class="1">第６回Webページ作成演習</h1>
+  <h1 class="1">工夫点，苦心点，強調点，感想</h1>
+  <p>工夫点としては、グルメ情報の部分の背景を授業で習った通り、バッググラウンドの色の変更をしました。また、グルメ情報なので食欲をそそりやすい緑色を採用しました。番号の入力欄はグルメ情報の文字のすぐ下に配置し、目につきやすい位置に配置しました。入力欄はちょうど入力文字が入る大きさに設定し、何を入力するのか分かりやすくしました。入力結果を出力するボタンを分かりやすいように表示という文字を入力しました。表の周りに空白を設定することでどこまでが表なのか分かるようにしました。表は二重の線にし、表の頭に分類する文字を入力しました。また、その文字は太文字で、中央詰めにしました。その他の表の項目については右寄りにし、細い文字にし、見やすくしました。入力欄でエラーが発生すると表の下に表示し、検索に支障を出にくくしました。無理に背景色を多く使わないことで全体のまとまりを意識したWebページにしました。
+    苦心点としては、入力された文字をURLに代入するときに余計なプラグラムをしてしまい、元に戻すのが大変でした。また、表を作るときにfor文を使っていなかったため、どこでエラーが出ているか分からず、いったん別のやり方をしたプログラムを作成しました。また、プレースホルダーをどこにつければよいか、javascriptで使う目的を考えながら作成していたが、プレースホルダーをあまり理解できていない部分があったために、かなりの時間を費やしてしまいました。数あてゲーム同様、Webページに表示する必要があるのでjavascriptで何から作成すれば良いか悩みましたが、とりあえず授業で習った資料をもとにサンプルをまずはそのまま入力し、組み合わせて作ることから取り組みました。しかし、遠回りな考え方をしてしまったため、Webページに反映するのが大変でした。
+    強調点としては、文字の大きさを大きすぎないように設定しました。
+    感想としては、授業内で終わることがほぼ無かったので、家でずっと模索し、作成していました。分からないところは、次の授業の次の課題の時に質問して、なんとか完成させました。ただ、完成したときの嬉しさが大きく、大変だったけど嬉しさで緩和されてた感じでした。他に、授業中のTAの方の対応が非常に優しく、生徒に寄り添って問題解決をしてくれるので、気軽に質問することが出来ました。しかし、TAの方と教員は合計3人し甲斐ないのに対し、常に質問をみんながしているので、したいときに出来ないときもありました。
+  </p>
+  <h1 class="1">参考文献</h1>
+  <p><a href="https://www.nishita-lab.org/web-contents/text/0intro2022/0_1theme.html">今回授業で使用した資料</a></p>
   </body>
 </html>
